added about and made small visual changes

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -6,7 +6,7 @@ layout: default
 
 <div class="contact">
     <a class="contact__back" href="/contact">&lt;-- back</a>
-    <h1 class="contact__title">Contact:</h1>
+    <h1 class="contact__title">Say Hi!</h1>
     <div class="contactt__content">
         {{ content }}
     </div>
