--- a/_layouts/photography.html
+++ b/_layouts/photography.html
@@ -6,7 +6,7 @@ layout: default
 
 <div class="photography">
     <a class="photography__back" href="/photography">&lt;-- back</a>
-    <h1 class="photography__title">Photography:</h1>
+    <h1 class="photography__title">Photography!</h1>
     <div class="photography__content">
         {{ content }}
     </div>
